--- a/src/app.css
+++ b/src/app.css
@@ -5,6 +5,12 @@
   text-align: center;
 }
 
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 1em;
+}
+
 .logo {
   height: 6em;
   padding: 1.5em;
