--- a/src/TarotCard.css
+++ b/src/TarotCard.css
@@ -18,3 +18,9 @@
   text-align: center;
   margin-top: 5px;
 }
+
+.tarot-function {
+  /* make the text look like a title */
+  font-weight: bold;
+  font-size: 2em;
+}
